tests/coverage/misc/fail/early_errors/strict_mode/010_eval_arguments_assignment.js
'use strict';
eval = 1;
arguments = 2;
